# scalescrape-lab

./: .dockerignore  .env.example  .gitignore  README.md  compose.deploy.yml  compose.tailscale-proxy.yml  docker-compose.yml
.github/workflows/: deploy-development.yml  deploy-production.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260519_0001_initial_schema.py
apps/api/app/: api_metadata.py  database.py  errors.py  main.py  metrics.py  settings.py  source_circuit.py
apps/api/app/models/: __init__.py  entities.py
apps/api/app/repositories/: __init__.py  antibot.py  items.py  jobs.py  proxies.py  sources.py
apps/api/app/routers/: __init__.py  antibot.py  health.py  items.py  jobs.py  observability.py  proxies.py  sources.py
apps/api/app/schemas/: __init__.py  dto.py
apps/api/app/services/: antibot.py  bootstrap.py  items.py  jobs.py  proxies.py  queue.py  sources.py
apps/target_site/: .dockerignore  Dockerfile  next-env.d.ts  package-lock.json  package.json  pyproject.toml
apps/target_site/app/: antibot.py  captcha.py  fake_data.py  main.py  views.py
apps/target_site/src/: proxy.ts
apps/target_site/tests/: domain.test.ts  render.test.tsx
apps/worker/: Dockerfile  pyproject.toml  test_betano.py  test_proxy_logic.py
apps/worker/app/: betano.py  betano_scraper.py  books_scraper.py  celery_app.py  (+12 more)
docs/: case-procob-backend-pleno.md  fluxo-scraping.md
infra/prometheus/: prometheus.yml
tests/: test_api_contracts.py  test_core_behaviors.py  test_load_demo.py
tools/: load_demo.py
(+73 files in other folders)
