[project]
name = "scalescrape-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "celery>=5.4.0",
  "prometheus-client>=0.20.0",
  "alembic>=1.13",
]

[tool.setuptools.packages.find]
include = ["app*"]

